infra/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m" 
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx 
  tls:
  - hosts:
      - easyshop.dev
    secretName: ingress-tls-secret

  rules:
  - host: easyshop.dev  
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: api-gateway-srv 
              port:
                number: 4001
